[metadata]
name = atracsys
description = The atracsys SDK wrapper for the fusionTrack and the spryTrack
author = Atracsys
author_email = support@atracsys.com
license = atracsys
url = https://www.atracsys-measurement.com/
platforms = Windows, Linux, Mac
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = 
	=src

[options.packages.find]
where = src
exclude = 
	tests

[options.extras_require]
testing = 
	pytest
	pytest-cov

[options.entry_points]

[test]
extras = True

[tool:pytest]
addopts = 
	--cov atracsys --cov-report term-missing
	--verbose
norecursedirs = 
	dist
	build
	.tox
testpaths = tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

[egg_info]
tag_build = 
tag_date = 0

